Reorder painting of hovered closing tabs with the other hovered tabs.

I moved the code from PaintClosingTabs() to a local lambda and refactored
the code that checks for the hovered states into a separate lambda. Now,
when closing a hovered tab (especially if you add --animation-duration-scale=4.0)
you can clearly see the closing and hovered tab paint with the lower tails
visible until it's gone. While less likley to happen, the code will also
ensure that if there are multiple tabs being closed with an active hover
in progress, they will paint along with the non-closing hovered tabs in
the correct order.

Bug: 867167
Change-Id: Id5d28ef51857390b3f7ec641a8a0c071ce562859
Reviewed-on: https://chromium-review.googlesource.com/1150218
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578635}
Former-commit-id: 3a9d235d4d7f81ff67d0b35f7114442044641842